fix: fix imports

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@axanet/natgold-api-model",
-  "version": "1.0.2",
-  "main": "dist/index.d.ts",
+  "version": "1.0.3",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
